Adding an icon to show that there is new message.

--- a/Jobsity.Challenge.FinancialChat.Web/css/site.css
+++ b/Jobsity.Challenge.FinancialChat.Web/css/site.css
@@ -116,8 +116,12 @@ header {
     background-color: #efefef;
 }
 
-
-/* Estilo para chat */
+.room.new_notification:before {
+    content: '◉';
+    color: green;
+    position: absolute;
+    margin: -15px;
+}
 
 .chats_wrapper {
     white-space: nowrap;
