Implementing posting a command result into chat.

--- a/Jobsity.Challenge.FinancialChat.Web/css/site.css
+++ b/Jobsity.Challenge.FinancialChat.Web/css/site.css
@@ -169,7 +169,7 @@ header {
 }
 
 .chats_wrapper .chat main .message.room {
-    background-color: #a0ffac;
+    background-color: #e6e5e5;
     margin: 5px auto;
 }
 
