--- a/src/Jobsity.Challenge.FinancialChat.Web/Pages/Index.cshtml
+++ b/src/Jobsity.Challenge.FinancialChat.Web/Pages/Index.cshtml
@@ -6,6 +6,7 @@
 
 <div class="container info_chat" style="display:none;">
     <div class="chats">
+        @(Html.Hidden(IndexModel.SignalRUrl, ViewData[IndexModel.SignalRUrl]))
         <header>
             <div class="userAvatar">
             </div>
